# valo-platform

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  knowledge.md  pyproject.toml
config/: __init__.py  map_transforms.json  settings.py  valorant_terms.json
dashboard/: app.py
docs/: database-design.md  requirements.md  tech-stack.md
scripts/: check_analysis.py  check_db_status.py  check_stats.py  detailed_analysis.py  import_knowledge.py  import_match_json.py  import_replay_events.py  show_coached_match.py  show_detailed_stats.py  show_time_kd.py  test_all_recent.py  test_api_live.py  test_audio_devices.py  test_coach.py  test_find_abyss_match.py  test_find_custom_match.py  test_kb_import.py  test_llm.py  test_parser.py  test_post_match.py  test_round_analysis.py
src/: __init__.py  main.py
src/ai/: __init__.py  coach.py  knowledge_base.py  knowledge_loader.py  llm_client.py  transcriber.py
src/api/: __init__.py  client.py  lockfile.py  websocket.py
src/audio/: __init__.py  capture.py  diarization.py  whisper.py
src/db/: __init__.py  database.py  models.py
src/intelligence/: __init__.py  evaluator.py  llm.py  rag.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  match_tracker.py  replay_service.py  stats_service.py
src/sync/: __init__.py  event_audio_linker.py  sync_recorder.py  timeline.py
src/utils/: notify.py  timeline.py
src/vision/: __init__.py  deepseek.py  screen.py  trigger.py
