[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valorant-tracker"
version = "0.1.0"
description = "Valorant match tracking with voice chat synchronization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    
    # Valorant API
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    
    # Audio
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "faster-whisper>=0.10.0",
    "pyannote.audio>=3.1.0",
    
    # Vision
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    
    # AI/LLM
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    
    # UI
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
valorant-tracker = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

